fix misalignment on offers view

--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -274,7 +274,6 @@ input[type="submit"]:hover {
 }
 
 .search-separator h3 {
-    padding-top: 0.2rem;
     font-size: 30px;
     font-weight: 100;
     color: rgb(0, 0, 0);
